--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ a:hover {
 
 .cover {
   height: 350px;
-  background-image: url(https://cdn.glitch.com/d12d0204-1e38-4ee3-a903-f70f1ff0b383%2Ffondo.jpg?v=1615498274742);
+  background-image: url(/assets/img/firma.jpg);
   color: white;
   background-size: cover;
   background-position: center;
